cheeseburger: dts: import dts sound changes from 4.5.11
Change-Id: Ic455938ef0fb3229fcaa8b821a06baddef6a32c7
Signed-off-by: Alexander Martinz <alex@amartinz.at>

--- a/arch/arm/boot/dts/qcom/cheeseburger.dtsi
+++ b/arch/arm/boot/dts/qcom/cheeseburger.dtsi
@@ -441,6 +441,10 @@
 	status = "disabled";
 };
 
+&snd_9335 {
+	qcom,mbhc-audio-jack-type = "4-pole-jack";
+};
+
 /* Audio */
 &soc {
 	i2c@c1b7000 {
