Modify access rules
Change-Id: Icec812a822a391a6b22816874cda97789d115318

--- a/project.config
+++ b/project.config
@@ -1,5 +1,5 @@
 [access]
-	inheritFrom = PROJECT-Oneplus-cheeseburger
+	inheritFrom = PROJECT-Oneplus-msm8998
 [submit]
 	action = rebase if necessary
 [access "refs/heads/*"]
