--- a/arch/arm/boot/dts/qcom/dsi-panel-samsung_s6e3fc1_cmd.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-samsung_s6e3fc1_cmd.dtsi
@@ -231,5 +231,43 @@
 			qcom,mdss-dsi-adaption-mode-command-state = "dsi_hs_mode";
 
 /**************************************************************************/
+
+		cm,mdss-livedisplay-cabc-cmd = [
+				15 01 00 00 00 00 02 55 00];
+		cm,mdss-livedisplay-cabc-ui-value = <0x01>;
+		cm,mdss-livedisplay-cabc-image-value = <0x02>;
+		cm,mdss-livedisplay-cabc-video-value = <0x03>;
+		cm,mdss-livedisplay-hbm-on-cmd = [
+				15 01 00 00 00 00 02 53 E8];
+		cm,mdss-livedisplay-hbm-off-cmd = [
+				15 01 00 00 00 00 02 53 28];
+		cm,mdss-livedisplay-srgb-on-cmd = [
+				39 01 00 00 00 00 03 f0 5A 5A
+				39 01 00 00 00 00 02 C3 81
+				39 01 00 00 00 00 02 B0 19
+				39 01 00 00 00 00 16 C3 B2 06 05 3C CF 14 07 07 B2 4B E7 C9 BF 0A B9 E5 DA 18 FF F6 D7
+				39 01 00 00 00 00 02 B0 18
+				39 01 00 00 00 00 02 C3 01
+				39 01 00 00 00 00 03 f0 A5 A5];
+		cm,mdss-livedisplay-srgb-off-cmd = [
+				39 01 00 00 00 00 03 F0 5A 5A
+				39 01 00 00 00 00 02 C3 01
+				39 01 00 00 00 00 02 B0 18
+				39 01 00 00 00 00 02 C3 00
+				39 01 00 00 00 00 03 F0 A5 A5];
+		cm,mdss-livedisplay-dci-p3-on-cmd = [
+				39 01 00 00 00 00 03 f0 5A 5A
+				39 01 00 00 00 00 02 C3 81
+				39 01 00 00 00 00 02 B0 19
+				39 01 00 00 00 00 16 C3 D8 00 00 16 D2 00 08 08 C3 1C F1 CF E8 02 C8 E9 DF 00 FF F6 D7
+				39 01 00 00 00 00 02 B0 18
+				39 01 00 00 00 00 02 C3 01
+				39 01 00 00 00 00 03 f0 A5 A5];
+		cm,mdss-livedisplay-dci-p3-off-cmd = [
+				39 01 00 00 00 00 03 F0 5A 5A
+				39 01 00 00 00 00 02 C3 01
+				39 01 00 00 00 00 02 B0 18
+				39 01 00 00 00 00 02 C3 00
+				39 01 00 00 00 00 03 F0 A5 A5];
 	};
 };
